2 Januari 2007: Wouter
	- Added contrib script from Stephane Bortzmeyer to convert NSD 2 to 
	  NSD 3 config files. Converts secondary zones and TSIG keys.
	- Made config conversion script skip empty lines.
	- Made config conversion script convert primary zones (and notify).

15 December 2006: Wouter
	- Removed dlopen() checks from configure.ac, NSD3 no longer has
	  dynamic plugin support (since 3.0.0).
	- added .rpm spec file to contrib.
	- Updated README to remove reference to buildzones script.

12 December 2006: Wouter
	- Added missing include to ipc.c to compile on SunOS.
	- Cast to avoid signed/unsigned comparison in compat/inet_ntop.c.

11 December 2006: Wouter
	- Added test to check for CNAME and other data error by zonec.
	  Currently NSEC, NSEC3, RRSIG, SIG, NXT are allowed next to CNAME.
	- Fixup unaligned memory access that could occur when reading ixfr.db
	  with a partial transfer inside.
	- RR type WKS (well known service) was not printed correctly,
	  htons() was forgotten when calling getservbyport.
	- NSD does not complain about not being able to read the db CRC
	  when all that happens is the file became longer or shorter.

8 December 2006: Wouter
	- Moved down max XFRD UDP sockets for zone transfer queries to 100
	  down from 300. This makes the total socket max at 200, so it fits
	  easily under 256 ulimit (a common default).

7 December 2006: Wouter
	- Improved error message to help operator.
	- created 3.0.3 svn tag.
	- default of zonesdir corrected (no directory is default).

4 December 2006: Wouter
	- updated test packages. Moved 213_large from manual to long.
	  size_0, source_port_0 made more working (needs root permission).

1 December 2006: Wouter
	- Moved xfrd ipc and reload handlers to front of event handler
	  lists for a 10% speedup in xfrd.
	- Fixed so that NSD no longer interrupts zone transfers when
	  a notify comes in for that zone. Added package to test it.
	- Fixed warning on Solaris 10.

30 November 2006: Wouter